--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ https://templatemo.com/tm-536-dream-pulse
 			      				<p>Laravel is also a part of a group called TALL stack (Tailwind, Alpine.js, Laravel, Livewire)</p>
 			      				<b>Timeline of Laravel updates: </b>
 							<ul>
-								<style="text-decoration:underline;"><b> October </b></style>
+							<b style="text-decoration:underline;"> October :</b>
 								<li><b> 02/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha" target="_blank"> Launch of the Css Tailwind platform (in its Alpha stage)</a></li>
 			     					<li><b> 05/10/2021: </b><a href="https://laravel-news.com/serialization-for-eloquent-s-querybuilder" target="_blank"> L'option serialization pour le QueryBuilder</a></li>
 								<li><b> 12/10/2021: </b><a href="https://laravel-news.com/laravel-github-actions"> Laravel Github Actions</a></li>
@@ -245,7 +245,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 26/10/2021: </b><a href="https://laravel-news.com/laravel-soft-delete-parent" target="_blank"> Deleting Child/Parent Models</a></li> 
 								<li><b> 28/10/2021: </b><a href="https://laravel-news.com/blast-storybook-ui-development-for-laravel-blade" target="_blank"> Blast for Laravel Blade</a></li> 
 								<br>
-								<style="text-decoration:underline;"><b> November </b></style>
+							<b style="text-decoration:underline;"> November :</b>
 								<li><b> 02/11/2021: </b><a href="https://laravel-news.com/larastan-v1-released" target="_blank"> release of Larastan V1</a></li> 
 								<li><b> 04/11/2021: </b><a href="https://laravel-news.com/laravel-world" target="_blank"> Laravel World </a></li> 
 								<li><b> 10/11/2021: </b><a href="https://laravel-news.com/laravel-8-70-0" target="_blank"> Release of Laravel version 8.70 </a></li>
@@ -259,7 +259,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 26/11/2021: </b><a href="https://laravel-news.com/php-8-1-0" target="_blank"> PHP 8.1 </a></li>
 								<li><b> 30/11/2021: </b><a href="https://laravel-news.com/laravel-vue-i18n" target="_blank"> Laravel and vue translation package </a></li>
 								<br>
-								<style="text-decoration:underline;"><b> December </b></style>
+							<b style="text-decoration:underline;"> December :</b>
 								<li><b> 02/12/2021: </b><a href="https://laravel-news.com/laravel-ban" target="_blank"> Laravel ban package </a></li>
 								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store" target="_blank"> AWS parameter store </a></li>
 								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/archtech-ecommerce-package" target="_blank"> Archtech e-commerce </a></li>
@@ -277,7 +277,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 29/12/2021: </b><a href="https://laravel-news.com/openai-sdk-for-php" target="_blank"> Open API SDK</a></li>
 								<li><b> 30/12/2021: </b><a href="https://laravel-news.com/primitive-types-in-controllers-and-closure-routes" target="_blank"> primitives Types </a></li>
 								<br>
-								<style="text-decoration:underline;"><b> Janvier </b></style>
+							<b style="text-decoration:underline;"> Janvier :</b>
 								<li><b> 04/01/2021: </b><a href="https://laravel-news.com/migrator-gui-migration-manager-for-laravel" target="_blank"> GUI Migrations </a></li>
 								<li><b> 06/01/2021: </b><a href="https://laravel-news.com/media-upload-component-for-vue-3" target="_blank"> Vue 3 media uploads </a></li>
 								<li><b> 07/01/2021: </b><a href="https://laravel-news.com/laravel-hours-helper" target="_blank"> Laravel hours helper </a></li>
@@ -293,7 +293,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 27/01/2021: </b><a href="https://laravel-news.com/eloquent-inspector-for-laravel" target="_blank"> Eloquent inspector </a></li>
 								<li><b> 28/01/2021: </b><a href="https://laravel-news.com/laravel-slack-alerts" target="_blank"> Laravel stack alerts </a></li>
 								<br>
-								<style="text-decoration:underline;"><b> Fevrier </b></style>
+							<b style="text-decoration:underline;"> Fevrier :</b>
 								<li><b> 01/02/2021: </b><a href="https://laravel-news.com/roach-php" target="_blank"> Web scrapping Toolkit </a></li>
 								<li><b> 03/02/2021: </b><a href="https://laravel-news.com/php-monitor-5-0" target="_blank"> Php monitor 5.0 </a></li>
 								<li><b> 04/02/2021: </b><a href="https://laravel-news.com/tailwind-css-laravel" target="_blank"> Tailwind CSS </a></li>
@@ -311,7 +311,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 24/02/2021: </b><a href="https://laravel-news.com/enum-helpers-for-php " target="_blank"> Enum helper for php </a></li>
 								<li><b> 25/02/2021: </b><a href="https://laravel-news.com/never-trust-your-users " target="_blank"> Never trust your users (tutoriel) </a></li>
 								<br>
-								<style="text-decoration:underline;"><b> Mars </b></style>
+							<b style="text-decoration:underline;"> Mars :</b>
 								<li><b> 01/03/2021: </b><a href="https://laravel-news.com/laravel-telegraph" target="_blank"> Laravel Telegraph </a></li>
 								<li><b> 02/03/2021: </b><a href="https://laravel-news.com/laravel-envy" target="_blank"> Laravel Envy (Packages) </a></li>
 								<li><b> 03/03/2021: </b><a href="https://laravel-news.com/laravel-blade-emerald" target="_blank"> Blade Components </a></li>
