--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ https://templatemo.com/tm-536-dream-pulse
 			      				<ul>	
 								<li><b> 02/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha" target="_blank"> Launch of the Css Tailwind platform (in its Alpha stage)</a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a> </li>
 			     					<li><b> 05/10/2021: </b><a href="https://laravel-news.com/serialization-for-eloquent-s-querybuilder" target="_blank"> L'option serialization pour le QueryBuilder</a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
-								<li><b> 12/10/2021: </b><a href="https://laravel-news.com/laravel-github-actions" target="_blank"> Laravel Github Actions</a> | <a href ="https://laravel-news.com/category/tutorials" style='color:0000FF'>[tutorial]</a> </li>
+								<li><b> 12/10/2021: </b><a href="https://laravel-news.com/laravel-github-actions" target="_blank"> Laravel Github Actions</a> | <a href ="https://laravel-news.com/category/tutorials" style='color:000099'>[tutorial]</a> </li>
 								<li><b> 13/10/2021: </b><a href="https://laravel-news.com/laravel-8-64-0" target="_blank"> release of Laravel version 8.64</a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a> </li> 
 								<li><b> 14/10/2021: </b><a href="https://laravel-news.com/laravel-shopify" target="_blank"> Shopify API</a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>								 
 								<li><b> 15/10/2021: </b><a href="https://laravel-news.com/php-8-1-support-in-laravel-sail" target="_blank"> PHP in Laravel Sail</a></li> 
@@ -267,7 +267,7 @@ https://templatemo.com/tm-536-dream-pulse
 							<b style="text-decoration:underline;"> December :</b>
 			      				<ul>
 								<li><b> 02/12/2021: </b><a href="https://laravel-news.com/laravel-ban" target="_blank"> Laravel ban package </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
-								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store" target="_blank"> AWS parameter store </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:0000FF'>[tutorial]</a> </li>
+								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store" target="_blank"> AWS parameter store </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:000099'>[tutorial]</a> </li>
 								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/archtech-ecommerce-package" target="_blank"> Archtech e-commerce </a> | <a href ="https://laravel-news.com/category/sponsor" style='color:#606060'> [sponsor] </a></li>
 								<li><b> 07/12/2021: </b><a href="https://laravel-news.com/laravel-showsql" target="_blank"> ShowsSQL </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 08/12/2021: </b><a href="https://laravel-news.com/laravel-8-75-0" target="_blank"> Laravel v8.75 </a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a> </li>
@@ -281,7 +281,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 24/12/2021: </b><a href="https://laravel-news.com/laravel-auto-binder" target="_blank"> Laravel auto-binder </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 28/12/2021: </b><a href="https://laravel-news.com/getcandy-e-commerce-package-for-laravel" target="_blank"> Getcandy e-commerce </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 29/12/2021: </b><a href="https://laravel-news.com/openai-sdk-for-php" target="_blank"> Open API SDK</a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
-								<li><b> 30/12/2021: </b><a href="https://laravel-news.com/primitive-types-in-controllers-and-closure-routes" target="_blank"> primitives Types </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:0000FF'>[tutorial]</a> </li>
+								<li><b> 30/12/2021: </b><a href="https://laravel-news.com/primitive-types-in-controllers-and-closure-routes" target="_blank"> primitives Types </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:000099'>[tutorial]</a> </li>
 							</ul>	
 			      					<br>
 							<b style="text-decoration:underline;"> Janvier :</b>
@@ -297,7 +297,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 20/01/2021: </b><a href="https://laravel-news.com/laracon-online-winter-will-be-free" target="_blank"> Laracon Online Winter </a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a> </li>
 								<li><b> 21/01/2021: </b><a href="https://laravel-news.com/laravel-9-ignition-error-pages" target="_blank"> Ignition in Laravel 9 </a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a></li>
 								<li><b> 25/01/2021: </b><a href="https://laravel-news.com/laravel-dumper" target="_blank"> Laravel Dumper </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
-								<li><b> 25/01/2021: </b><a href="https://laravel-news.com/safer-staging-environments-with-blackhole-storage" target="_blank"> Blackhole storage </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:0000FF'>[tutorial]</a> </li>
+								<li><b> 25/01/2021: </b><a href="https://laravel-news.com/safer-staging-environments-with-blackhole-storage" target="_blank"> Blackhole storage </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:000099'>[tutorial]</a> </li>
 								<li><b> 27/01/2021: </b><a href="https://laravel-news.com/eloquent-inspector-for-laravel" target="_blank"> Eloquent inspector </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 28/01/2021: </b><a href="https://laravel-news.com/laravel-slack-alerts" target="_blank"> Laravel stack alerts </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 							</ul>	
@@ -307,19 +307,19 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 01/02/2021: </b><a href="https://laravel-news.com/roach-php" target="_blank"> Web scrapping Toolkit </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 03/02/2021: </b><a href="https://laravel-news.com/php-monitor-5-0" target="_blank"> Php monitor 5.0 </a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a> </li>
 								<li><b> 04/02/2021: </b><a href="https://laravel-news.com/tailwind-css-laravel" target="_blank"> Tailwind CSS </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
-								<li><b> 07/02/2021: </b><a href="https://laravel-news.com/using-s3-with-laravel " target="_blank"> S3 Laravel </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:0000FF'>[tutorial]</a> </li>
+								<li><b> 07/02/2021: </b><a href="https://laravel-news.com/using-s3-with-laravel " target="_blank"> S3 Laravel </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:000099'>[tutorial]</a> </li>
 								<li><b> 08/02/2021: </b><a href="https://laravel-news.com/laravel-9-released" target="_blank"> Laravel 9 </a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a> </li>
 								<li><b> 09/02/2021: </b><a href="https://laravel-news.com/php-statistics " target="_blank"> php statistics </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 10/02/2021: </b><a href="https://laravel-news.com/laravel-google-chat-alerts " target="_blank"> Google chat alerts </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 11/02/2021: </b><a href="https://laravel-news.com/git-trim" target="_blank"> git trim </a> | <a href ="https://laravel-news.com/category/tools" style='color:purple'> [dev tool] </a> </li>
 								<li><b> 15/02/2021: </b><a href="https://laravel-news.com/envy" target="_blank"> Envy by Worksome </a></li>
-								<li><b> 16/02/2021: </b><a href="https://laravel-news.com/avoiding-accidental-email-sends" target="_blank"> Eviter d'envoyer d'emails par accidents </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:0000FF'>[tutorial]</a> </li>
+								<li><b> 16/02/2021: </b><a href="https://laravel-news.com/avoiding-accidental-email-sends" target="_blank"> Eviter d'envoyer d'emails par accidents </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:000099'>[tutorial]</a> </li>
 								<li><b> 17/02/2021: </b><a href="https://laravel-news.com/create-and-send-digest-emails-in-laravel" target="_blank"> Emails avec Laravel </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 18/02/2021: </b><a href="https://laravel-news.com/automatic-route-discovery-in-laravel " target="_blank"> automatic route discovery </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 22/02/2021: </b><a href="https://laravel-news.com/zsh-artisan " target="_blank"> zhs Artisan </a> | <a href ="https://laravel-news.com/category/tools" style='color:6633FF'> [dev tool] </a> </li>
 								<li><b> 23/02/2021: </b><a href="https://laravel-news.com/laravel-9-2-0 " target="_blank"> Laravel 9.2 </a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a> </li>
 								<li><b> 24/02/2021: </b><a href="https://laravel-news.com/enum-helpers-for-php " target="_blank"> Enum helper for php </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
-								<li><b> 25/02/2021: </b><a href="https://laravel-news.com/never-trust-your-users " target="_blank"> Never trust your users </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:0000FF'>[tutorial]</a> </li>
+								<li><b> 25/02/2021: </b><a href="https://laravel-news.com/never-trust-your-users " target="_blank"> Never trust your users </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:000099'>[tutorial]</a> </li>
 							</ul>	
 								<br>
 							<b style="text-decoration:underline;"> Mars :</b>
@@ -331,7 +331,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 08/03/2021: </b><a href="https://laravel-news.com/global-ray" target="_blank"> PHP scripts </a> | <a href ="https://laravel-news.com/category/tools" style='color:6633FF'> [dev tool] </a> </li>
 								<li><b> 09/03/2021: </b><a href="https://laravel-news.com/laravel-9-4-0" target="_blank"> Laravel 9.4 </a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a> </li>
 								<li><b> 10/03/2021: </b><a href="https://laravel-news.com/blade-cache-directive" target="_blank"> Blade Markup </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
-								<li><b> 11/03/2021: </b><a href="https://laravel-news.com/laravel-socialite-custom-driver" target="_blank"> Laravel socialite cusom driver </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:0000FF'>[tutorial]</a> </li>
+								<li><b> 11/03/2021: </b><a href="https://laravel-news.com/laravel-socialite-custom-driver" target="_blank"> Laravel socialite cusom driver </a> | <a href ="https://laravel-news.com/category/tutorials" style='color:000099'>[tutorial]</a> </li>
 								<li><b> 15/03/2021: </b><a href="https://laravel-news.com/nexopos-point-of-sale-for-laravel" target="_blank"> NexoPOS </a> | <a href ="https://laravel-news.com/category/applications" style='color:navy'> [Laravel Applications] </a> </li>
 								<li><b> 15/03/2021: </b><a href="https://laravel-news.com/statamic-3-3-released" target="_blank"> statamic 3.3 </a> | <a href ="https://laravel-news.com/category/news"style='color:red'>[news]</a> </li>
 								<li><b> 17/03/2021: </b><a href="https://laravel-news.com/laravel-livewire-form-wizard " target="_blank"> Livewire form wizard </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
@@ -341,7 +341,6 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 23/03/2021: </b><a href="https://laravel-news.com/pest-given-when-then" target="_blank"> GWT plugin for Pest </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 24/03/2021: </b><a href="https://laravel-news.com/laravel-translations-checker" target="_blank"> Laravel translation checker </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
 								<li><b> 25/03/2021: </b><a href="https://laravel-news.com/glob-like-file-and-pattern-matching-utilities-for-php" target="_blank"> php splat </a> | <a href ="https://laravel-news.com/category/packages" style='color:purple'> [Packages] </a> </li>
-								<li><b> 2/03/2021: </b><a href="" target="_blank">  </a></li>
 								<li><b> 2/03/2021: </b><a href="" target="_blank">  </a></li>
 								<li><b> 2/03/2021: </b><a href="" target="_blank">  </a></li>
 			      				</ul>
